# TDTSGA

TDTSGA/: README.md
TDTSGA/Result/: TDTSGA定时间.xlsx  TDTSGA比较.xlsx  TSTDGA正交实验.xlsx
TDTSGA/exp_Time/: CGA.cpp  HGA.cpp  LWSGA.cpp
TDTSGA/exp_Time/include/: GenerateAChrom.h
TDTSGA/exp_Time/lib/: GenOperator.cpp  GenerateAChrom.cpp
TDTSGA/exp_compare/: CMakeLists.txt  HGA.cpp  IHEFT3.cpp  IHEFT3.h  TDTSGA.cpp  TDTSGA.h  fileList.txt  main.cpp
TDTSGA/exp_compare/include/: GenOperator.h  GenerateAChrom.h  classAndVarDefine.h  config.h
TDTSGA/exp_compare/lib/: CMakeLists.txt  GenOperator.cpp  GenerateAChrom.cpp  classAndVarDefine.cpp  config.cpp  tools.cpp
TDTSGA/exp_orthogonal/: CMakeLists.txt  TDTSGA.cpp  TDTSGA.h  exp.txt  main.cpp
TDTSGA/exp_orthogonal/data/: 25_0.4_0.txt
TDTSGA/exp_orthogonal/include/: GenOperator.h  GenerateAChrom.h  classAndVarDefine.h  config.h  tools.hpp
TDTSGA/exp_orthogonal/lib/: CMakeLists.txt  GenOperator.cpp  GenerateAChrom.cpp  classAndVarDefine.cpp  config.cpp  tools.cpp
